# django-ltree

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .travis.yml  CONTRIBUTORS  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  python-versions.txt  ruff.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: main.yml  test.yml
django_ltree/: __init__.py  apps.py  checks.py  fields.py  forms.py  functions.py  lookups.py  managers.py  models.py  operations.py  paths.py  validators.py
django_ltree/migrations/: 0001_create_extension.py
example/: manage.py  requirements.txt
example/categories/: admin.py  models.py  tests.py
example/categories/migrations/: 0001_initial.py
example/project/: settings.py  urls.py
tests/: conftest.py  test.py  test_1.py  test_functions.py  test_lookups.py  test_lquery_field.py  test_model.py  test_path_field.py  test_path_value.py  test_register.py
tests/conf/: settings.py
tests/taxonomy/: apps.py  models.py
tests/taxonomy/migrations/: 0001_initial.py  0002_alter_taxonomy_managers_and_more.py
